Add index and main menu template

--- a/templates/manager/index.html
+++ b/templates/manager/index.html
@@ -9,6 +9,7 @@
 
 {% block main-content %}
     {% if user.participant %}
+        {% include "manager/participant/index.html" %}
     {% endif %}
 
     {% if user.judge %}
