--- a/templates/competition/main_menu.html
+++ b/templates/competition/main_menu.html
@@ -7,7 +7,7 @@
             {% if user.is_authenticated %}
                 {% if user.participant %}
                     <li>
-                        <a href="{% url participant-scoreboard %}">
+                        <a href="">
                             Scoreboard
                         </a>
                     </li>
