--- a/templates/participant/index.html
+++ b/templates/participant/index.html
@@ -1,9 +1,9 @@
-{% load show_submissions %}
+{# {% load show_submissions %} #}
 {% load show_problems %}
-{% load show_overview %}
+{# {% load show_overview %} #}
 
 <div>
-    {% show_overview user.participant %}
+    {# {% show_overview user.participant %} #}
 </div>
 
 <div class="grid_6">
@@ -11,7 +11,7 @@
 </div>
 
 <div class="grid_6">
-    {% show_submissions user.participant %}
+    {# {% show_submissions user.participant %} #}
 </div>
 
 <div class="clear"></div>
