--- a/templates/base.html
+++ b/templates/base.html
@@ -1,88 +1,56 @@
-<!doctype html>  
-
+<!doctype html>
+{% load i18n %}
 <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
 <!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
 <!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
 <!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
-{% block head %}
 <head>
-  <meta charset="utf-8">
-
-  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
-       Remove this if you use the .htaccess -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <title>{% block title %}Name your pages!{% endblock title %}</title>
-  {% block metadata %}
-    <meta name="author" content="">
-    <meta name="description" content="">
-  {% endblock metadata %}
-  
-  <!-- Place favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-  {% block favicons %}
-    <link rel="shortcut icon" href="/media/favicon.ico">
-  {% endblock %}
-
-
-  <!-- CSS : implied media="all" -->
-  {% block base-styles %}
-      <link rel="stylesheet" href="/media/css/style.css?v=2">
-      <link rel="stylesheet" href="/media/css/960.css">
-      <link rel="stylesheet" href="/media/css/text.css">
-      <link rel="stylesheet" href="/media/css/competition.css">
-      <link rel="stylesheet" href="/media/css/blitzer/jquery-ui-1.8.11.custom.css">
-  {% endblock base-styles %}
-  
-  <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-  <script src="/media/js/libs/modernizr-1.6.min.js"></script>
-  <script src="/media/js/libs/jquery-1.5.1.min.js"></script>
-
+    <meta charset="utf-8" />
+    <title>{% block title %}{% trans "Project Name" %}{% endblock %}</title>
+    
+    <meta name="description" content="{% block meta_description %}{% endblock %}" />
+    <meta name="author" content="{% block meta_author %}{% endblock %}" />
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
+    
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=2" />
+    {% block css %}{% endblock %}
+    <script src="{{ STATIC_URL }}js/modernizr-2.0.js"></script>
 </head>
-{% endblock head %}
 
+<body class="{% block body_class %}{% endblock %}">
 {% block body %}
-<body>
+    <div id="container">
+        <header>
+          <nav id="user-menu">
+            <a href="">{% trans "Dashboard" %}</a>
+          </nav>
 
-  <div class="container_12">
-    {% block header %}
-    {% endblock header %}
-
-    <div id="main">
-    {% block main-content %}
-
-    {% endblock main-content %}
-    </div>
-
-    {% block footer %}
-    <footer>
-        <p>v0.1</p>
-    </footer>
-    {% endblock footer %}
-  </div> <!--! end of #container -->
-
-
-  <!-- Javascript at the bottom for fast page loading -->
-
-  {% block js-libs %}
-    <script>!window.jQuery && document.write(unescape('%3Cscript src="/media/js/libs/jquery-1.5.1.min.js"%3E%3C/script%3E'))</script>
-  {% endblock js-libs %}
-  
-  
-  {% block my-js %}
-    <!-- scripts concatenated and minified via ant build script-->
-    <script src="/media/js/script.js"></script>
-    <script src="/media/js/libs/jquery-ui-1.8.11.custom.min.js"></script>
-    <script src="/media/js/libs/jquery.timeentry.js"></script>
-    <!-- end concatenated and minified scripts-->
-  {% endblock my-js %}
-  
-  
-  <!--[if lt IE 7 ]>
-    <script src="js/libs/dd_belatedpng.js"></script>
-    <script> DD_belatedPNG.fix('img, .png_bg'); //fix any <img> or .png_bg background-images </script>
-  <![endif]-->
-
+          {% block competition-status %}{% endblock %}
+        </header>
+        
+        <div id="main" role="main">
+            {% block main-content %}{% endblock %}
+        </div>
+        
+        <footer>
+          <p>Nejupy v0.1</p>
+        </footer>
+    </div> <!-- end of #container -->
+    
+    
+    {% if debug %}{% include 'includes/debug.html' %}{% endif %}
+    {% block javascript_library %}
+    <script>!window.jQuery && document.write(unescape('%3Cscript src="{{ STATIC_URL }}js/jquery.1.6.1.min.js"%3E%3C/script%3E'))</script>
+    <script src="{{ STATIC_URL }}js/jquery.form.js"></script>
+    {% endblock %}
+    {% block javascript %}
+    <script src="{{ STATIC_URL }}js/nejupy.js"></script>
+    {% endblock %}
+    <!--[if lt IE 7 ]>
+    <script src="{{ STATIC_URL }}js/dd_belatedpng.js"></script>
+    <script> DD_belatedPNG.fix('img, .png_bg');</script>
+    <![endif]-->
+{% endblock %}
 </body>
-{% endblock body %}
 </html>
