--- a/templates/participant/index.html
+++ b/templates/participant/index.html
@@ -1,21 +1,7 @@
 {# {% load show_submissions %} #}
 {% load show_problems %}
-{% load show_dashboard %}
 
-{# {% load show_overview %} #}
-
-<div id="competition-dashboard" class="grid_12">
-    {% show_dashboard user %}
-</div>
-
-<div class="clear"></div>
-
-<div class="grid_6">
+  {% if user.participant.competition.in_progress %}
     {% show_problems user.participant %}
-</div>
+  {% endif %}
 
-<div class="grid_6">
-    {# {% show_submissions user.participant %} #}
-</div>
-
-<div class="clear"></div>
