Refactor show_dashboard templatetag

--- a/templates/competition/templatetags/show_dashboard.html
+++ b/templates/competition/templatetags/show_dashboard.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{% if participant %}
+{% if user %}
   {% if competition.not_started %}
   <h1>{% trans "Competition not started" %}</h1>
   {% endif %}
