--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
     
     <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=2" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/flick/jquery-ui.css" />
     {% block css %}{% endblock %}
     <script src="{{ STATIC_URL }}js/modernizr-2.0.js"></script>
 </head>
@@ -43,6 +44,8 @@
     {% block javascript_library %}
     <script>!window.jQuery && document.write(unescape('%3Cscript src="{{ STATIC_URL }}js/jquery.1.6.1.min.js"%3E%3C/script%3E'))</script>
     <script src="{{ STATIC_URL }}js/jquery.form.js"></script>
+    <script src="{{ STATIC_URL }}js/jquery.dataTables.min.js"></script>
+    <script src="{{ STATIC_URL }}js/jquery-ui.min.js"></script>
     {% endblock %}
     {% block javascript %}
     <script src="{{ STATIC_URL }}js/nejupy.js"></script>
