--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
     
     <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css?v=2" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/table_jui.css" />
     <link rel="stylesheet" href="{{ STATIC_URL }}css/flick/jquery-ui.css" />
     {% block css %}{% endblock %}
     <script src="{{ STATIC_URL }}js/modernizr-2.0.js"></script>
